# hello_world

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hello_world.sln
hello_cmake/: CMakeLists.txt
scripts/: setup.ps1
src/hello_cmake/: hello_cmake.cpp  hello_cmake.vcxproj  hello_cmake.vcxproj.filters
src/hello_cmake/hello_cmake.dir/Debug/: hello_cmake.exe.recipe  hello_cmake.ilk
src/hello_cmake/hello_cmake.dir/Debug/hello_cmake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/hello_osg/: hello_osg.cpp  hello_osg.vcxproj  hello_osg.vcxproj.filters
src/hello_osg/hello_osg.dir/Debug/: hello_osg.exe.recipe  hello_osg.ilk
src/hello_osg/hello_osg.dir/Debug/hello_osg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  hello_osg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/hello_qt/: CMakeLists.txt  hello_qt.cpp  hello_qt.vcxproj  hello_qt.vcxproj.filters
src/hello_qt/hello_qt.dir/Debug/: hello_qt.exe.recipe  hello_qt.ilk
src/hello_qt/hello_qt.dir/Debug/hello_qt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
